feat: nav, home, explore done

--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -27,7 +27,7 @@
         height: 40px;
         margin-right: 32px;
         padding: 12px;
-        background-color: #222325;
+        background-color: #18181b;
         border-radius: 50%;
 
         img {
