--- a/src/components/nav/index.less
+++ b/src/components/nav/index.less
@@ -5,9 +5,31 @@
   padding: 40px 80px;
 
   &__brand {
+    width: 140px;
+    text-align: center;
     font-size: 40px;
     font-weight: 900;
     line-height: 50px;
     letter-spacing: 1.2px;
+  }
+
+  &__link {
+    flex: 1;
+
+    .kip-nav__item {
+      margin-left: 28px;
+      margin-right: 48px;
+      font-size: 16px;
+      font-weight: 800;
+      letter-spacing: -0.32px;
+
+      & + .kip-nav__item {
+        margin-left: 0;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
