feat: create collection

--- a/src/pages/explore/index.less
+++ b/src/pages/explore/index.less
@@ -53,6 +53,7 @@
     .kip-collections {
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
 
       .kip-collection-card {
         position: relative;
