--- a/src/pages/detail/index.less
+++ b/src/pages/detail/index.less
@@ -82,9 +82,14 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
+          margin-bottom: 16px;
           padding: 16px;
           border-radius: 16px;
           background-color: #18181b;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
 
           .kip-query__info {
             .kip-query__question {
